--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -55,6 +55,14 @@ h1 {
   color: rgb(84, 155, 108);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.intro {
+  padding-top: 50px;
+  margin: auto;
+  width: 50%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  line-height: 25px;
+  color: rgb(0, 0, 0);
+}
 
 .footer {
   text-align: center;
@@ -74,11 +82,8 @@ a {
 
 ul {
   list-style: none;
-
 }
 
 ul li {
   margin-bottom: 30px;
- 
-
 }
